--- a/RMTV-recorder/CommonUI/Setting_UC.xaml
+++ b/RMTV-recorder/CommonUI/Setting_UC.xaml
@@ -18,7 +18,7 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="Time Zone" VerticalAlignment="Center" Foreground="Salmon"/>
-            <ComboBox Grid.Column="2" Name="cb_timezone" ItemsSource="{Binding}"/>
+            <ComboBox Grid.Column="2" Name="cb_timezone" ItemsSource="{Binding}" ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"/>
         </Grid>
         <StackPanel Grid.Row="1" Grid.Column="2" Margin="0,10" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <Button Content="Cancel" Height="30" Width="60" Background="Transparent" Click="Button_Close_Click"/>
