Add new feature
1. Refine retry recording operation
2. Able to set date and repeat times for recording
3. Add Dispose function for FFmpeg and ScheduledTask
4. Add Process_UC
5. Add Authentication_UC

--- a/RMTV-recorder/App.xaml
+++ b/RMTV-recorder/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:RMTV_recorder"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        
+        <ResourceDictionary Source="Style/Style.xaml" />
     </Application.Resources>
 </Application>
