--- a/RMTV-recorder/CommonUI/Processing_UC.xaml
+++ b/RMTV-recorder/CommonUI/Processing_UC.xaml
@@ -1,14 +1,15 @@
-﻿<local:ucCustom x:Class="RMTV_recorder.CommonUI.Processing_UC"
+﻿<local:ucCustom x:Class="RMTV_recorder.Processing_UC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:RMTV_recorder"
              mc:Ignorable="d" 
-             Height="200" Width="200" Background="DarkSalmon">
+             Height="Auto" Width="200" 
+             Background="DarkSalmon">
     <Grid Margin="10" Background="OldLace">
         <Grid.RowDefinitions>
-            <RowDefinition Height="3*" />
+            <RowDefinition Height="1*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid Margin="20">
@@ -18,16 +19,17 @@
             </Grid.RowDefinitions>
             <TextBlock TextWrapping="Wrap"
                        Name="tb_message"
-                       Foreground="DarkSalmon"
-                       VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                       Foreground="IndianRed"
+                       VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,10"/>
             <ProgressBar Grid.Row="1" 
                          Name="progressbar"
                          IsIndeterminate="True" 
-                         Foreground="DarkSeaGreen" Background="DarkOliveGreen" Height="15"
+                         Foreground="LightSlateGray" Background="DarkSalmon" Height="15"
                          BorderThickness="0"/>
         </Grid>
-        <Button Grid.Row="1" Name="button" Height="25" Width="Auto"
-                Background="DarkSalmon" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button Grid.Row="1" Name="button" Height="25" Width="Auto" 
+                Background="DarkSalmon" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                Margin="0,10" Visibility="Collapsed"/>
                 
     </Grid>
 </local:ucCustom>
