--- a/RMTV-recorder/CommonUI/AddRec_UC.xaml
+++ b/RMTV-recorder/CommonUI/AddRec_UC.xaml
@@ -2,13 +2,22 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:gif="http://wpfanimatedgif.codeplex.com" 
              xmlns:local="clr-namespace:RMTV_recorder"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              Height="Auto" Width="350" Background="OldLace">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Style/CommonLinkDataTemplate.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid Margin="10">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -25,7 +34,8 @@
         </Grid.ColumnDefinitions>
         <Label Grid.Row="0" Grid.Column="0" Content="Channel" VerticalAlignment="Center" FontWeight="ExtraBold" Foreground="Salmon"/>
         <Label Grid.Row="2" Grid.Column="0" Content="Start Time" VerticalAlignment="Center" FontWeight="ExtraBold" Foreground="Salmon"/>
-        <Label Grid.Row="3" Grid.Column="0" Content="End Time" VerticalAlignment="Center" FontWeight="ExtraBold" Foreground="Salmon"/>
+        <Label Grid.Row="4" Grid.Column="0" Content="End Time" VerticalAlignment="Center" FontWeight="ExtraBold" Foreground="Salmon"/>
+        <Label Grid.Row="6" Grid.Column="0" Content="Repeat" VerticalAlignment="Center" FontWeight="ExtraBold" Foreground="Salmon"/>
         <Grid Grid.Row="0" Grid.Column="2">
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Height="40">
                 <RadioButton GroupName="channel" Name="rb_channel_spanish" IsChecked="True" VerticalContentAlignment="Center"
@@ -44,7 +54,7 @@
                 </RadioButton>
             </StackPanel>
         </Grid>
-        <Grid Grid.Row="1" Grid.Column="2" Name="grid_custom" Visibility="Collapsed">
+        <Grid Grid.Row="1" Grid.Column="2" Name="grid_channel_custom">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="10" />
@@ -54,26 +64,40 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="5" />
                 <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="10" />
-                <ColumnDefinition Width="50" />
             </Grid.ColumnDefinitions>
-            <ScrollViewer Grid.Column="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Disabled" Name="scv">
-                <TextBox Name="tboxFilePath" VerticalContentAlignment="Center"
-                         MaxWidth="{Binding ElementName=scv,Path=ActualWidth}"
-                         ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}"/>
+            <Grid Grid.Column="0" Name="link_status" Visibility="Hidden">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="5" />
+                </Grid.ColumnDefinitions>
+                <Grid Width="20">
+                    <Image Name="img_status_loading" Source="/Resource/loading_20px.gif" Style="{StaticResource ResourceKey=Spinner}"/>
+                    <Image Name="img_status_ok" Source="/Resource/checkmark.png" Width="15" Stretch="Uniform"/>
+                    <Image Name="img_status_error" Source="/Resource/error.png" Width="15" Stretch="Uniform"/>
+                </Grid>
+                <Label Grid.Column="1" Width="5"/>
+            </Grid>
+            <ScrollViewer Grid.Column="1" Name="channellink" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Disabled">
+                <ComboBox Name="cboxFilePath" VerticalContentAlignment="Center"
+                          MaxWidth="{Binding ElementName=channellink,Path=ActualWidth}"
+                          ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}"
+                          Style="{StaticResource ResourceKey=ComboBoxStyle}"
+                          IsEditable="True"
+                          TextSearch.TextPath="Url">
+                    <ComboBox.ItemTemplateSelector>
+                        <local:CommonLinkTemplateSelector/>
+                    </ComboBox.ItemTemplateSelector>
+                </ComboBox>
             </ScrollViewer>
-            <Label Grid.Column="2" Content=""/>
-            <Button Grid.Column="3" Width="25" Content="…" 
+            <Button Grid.Column="3" Width="25" 
                             Name="btnFileSelect"
                             VerticalContentAlignment="Center"
                             Background="Salmon"
-                            Click="btnFileSelect_Click"/>
-            <CheckBox Grid.Column="5" Name="cb_verify" 
-                      FontSize="9"
-                      IsChecked="True"
-                      VerticalContentAlignment="Center">
-                <TextBlock TextWrapping="Wrap" Text="Don't Verify"/>
-            </CheckBox>
+                            Click="btnFileSelect_Click">
+                <StackPanel>
+                    <Image Source="/Resource/select.png"/>
+                </StackPanel>
+            </Button>
         </Grid>
         <Grid Grid.Row="2" Grid.Column="2" Height="40">
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
@@ -88,15 +112,60 @@
                              Checked="RadioButton_StartTime_CheckedChanged">
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                         <Label Content="At"/>
-                        <TextBox Name="tb_statrttime_hour" Width="30" MaxLength="2" TextChanged="textBox_DigitOnly" PreviewKeyDown="Window_PreviewKeyDown" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="False"/>
+                        <TextBox Name="tb_starttime_hour" 
+                                 Width="30" MaxLength="2" 
+                                 HorizontalContentAlignment="Center" VerticalContentAlignment="Center" 
+                                 TextChanged="textBox_DigitOnly" 
+                                 PreviewKeyDown="Window_PreviewKeyDown" 
+                                 LostFocus="TextBox_StartTime_LostFocus" 
+                                 IsEnabled="False"/>
                         <Label Content=":"/>
-                        <TextBox Name="tb_statrttime_min" Width="30" MaxLength="2" TextChanged="textBox_DigitOnly" PreviewKeyDown="Window_PreviewKeyDown" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="False"/>
+                        <TextBox Name="tb_starttime_min" 
+                                 Width="30" MaxLength="2" 
+                                 HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                                 TextChanged="textBox_DigitOnly" 
+                                 PreviewKeyDown="Window_PreviewKeyDown" 
+                                 LostFocus="TextBox_StartTime_LostFocus" 
+                                 IsEnabled="False"/>
                         <Label Content="{Binding Path=TimeZoneString}" ToolTip="{Binding Path=TimeZoneToolTip}"/>
                     </StackPanel>
                 </RadioButton>
             </StackPanel>
         </Grid>
-        <Grid Grid.Row="3" Grid.Column="2" Height="40">
+        <Grid Grid.Row="3" Grid.Column="2" Name="grid_startdate">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="10" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0" Orientation="Horizontal" Visibility="Hidden">
+                <RadioButton>
+                    <Label Content="Now"/>
+                </RadioButton>
+                <RadioButton>
+                    <Label Content="At"/>
+                </RadioButton>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Orientation="Horizontal">
+                <DatePicker Name="datepicker_startdate"
+                            VerticalContentAlignment="Center"
+                            HorizontalContentAlignment="Center"
+                            VerticalAlignment="Stretch"
+                            SelectedDateFormat="Short"
+                            Style="{StaticResource ResourceKey=DatePickerStyle}"/>
+                <Label Width="5"/>
+                <Button Name="btnEditDate"
+                        Content="edit" 
+                        Foreground="Salmon" 
+                        Background="Transparent" 
+                        BorderThickness="0"
+                        Click="btnEditDate_Click"/>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Row="4" Grid.Column="2" Height="40">
             <RadioButton GroupName="endtime" Name="rb_set_endtime" IsChecked="True" VerticalContentAlignment="Center" Checked="RadioButton_EndTime_CheckedChanged">
                 <StackPanel Name="sp_endtime_time" Orientation="Horizontal" VerticalAlignment="Center">
                     <Label Content="At"/>
@@ -107,7 +176,7 @@
                 </StackPanel>
             </RadioButton>
         </Grid>
-        <Grid Grid.Row="4" Grid.Column="2" Height="40">
+        <Grid Grid.Row="5" Grid.Column="2" Height="40">
             <RadioButton Grid.Row="3" Grid.Column="2" GroupName="endtime" VerticalContentAlignment="Center" Checked="RadioButton_EndTime_CheckedChanged">
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                     <Label Content="Or duration:"/>
@@ -118,68 +187,27 @@
                 </StackPanel>
             </RadioButton>
         </Grid>
-        <Grid Grid.Row="5" Grid.ColumnSpan="3">
-            <Expander Name="expander_advanced">
-                <Expander.Header>
-                    <TextBlock Text="Advanced" FontWeight="Bold" Foreground="Firebrick"/>
-                </Expander.Header>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="5" />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-                    <Label Grid.Row="0" Grid.Column="0" Content="Date" VerticalAlignment="Center" FontWeight="ExtraBold" Foreground="Salmon"/>
-                    <Label Grid.Row="1" Grid.Column="0" Content="Repeat" VerticalAlignment="Center" FontWeight="ExtraBold" Foreground="Salmon"/>
-                    <StackPanel Grid.Row="0" Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center" Height="40">
-                        <StackPanel  Orientation="Horizontal" VerticalAlignment="Center">
-                            <RadioButton GroupName="startdate" Name="rb_startdate_today" 
-                                         IsChecked="True" 
-                                         VerticalContentAlignment="Center" 
-                                         Checked="RadioButton_StartDate_CheckedChanged">
-                                <Label Content="Today"/>
-                            </RadioButton>
-                            <Label Width="10"/>
-                            <RadioButton GroupName="startdate" Name="rb_startdate_specified" 
-                                         VerticalContentAlignment="Center" 
-                                         Checked="RadioButton_StartDate_CheckedChanged">
-                                <DatePicker Name="datepicker_startdate"
-                                            IsEnabled="False"
-                                            VerticalAlignment="Center" 
-                                            HorizontalAlignment="Left"
-                                            SelectedDate="{x:Static sys:DateTime.Now}"
-                                            SelectedDateFormat="Short"/>
-                            </RadioButton>
-                            
-                        </StackPanel>
+        <Grid Grid.Row="6" Grid.Column="2">
+            <StackPanel  Orientation="Horizontal" VerticalAlignment="Center" Height="40">
+                <RadioButton GroupName="repeat" Name="rb_repeat_none" 
+                             IsChecked="True" 
+                             VerticalContentAlignment="Center" 
+                             Checked="RadioButton_Repeat_CheckedChanged">
+                    <Label Content="None"/>
+                </RadioButton>
+                <Label Width="10"/>
+                <RadioButton GroupName="repeat" Name="rb_repeat_times" 
+                             VerticalContentAlignment="Center" 
+                             Checked="RadioButton_Repeat_CheckedChanged"
+                             Visibility="Collapsed">
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                        <TextBox Name="tb_repeat_times" Width="30" MaxLength="2" TextChanged="textBox_DigitOnly" PreviewKeyDown="Window_PreviewKeyDown" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="False"/>
+                        <Label Content="days"/>
                     </StackPanel>
-                    <Grid Grid.Row="1" Grid.Column="2" Height="40">
-                        <StackPanel  Orientation="Horizontal" VerticalAlignment="Center">
-                            <RadioButton GroupName="repeat" Name="rb_repeat_none" 
-                                         IsChecked="True" 
-                                         VerticalContentAlignment="Center" 
-                                         Checked="RadioButton_Repeat_CheckedChanged">
-                                <Label Content="None"/>
-                            </RadioButton>
-                            <Label Width="10"/>
-                            <RadioButton GroupName="repeat" Name="rb_repeat_times" 
-                                         VerticalContentAlignment="Center" 
-                                         Checked="RadioButton_Repeat_CheckedChanged">
-                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                                    <TextBox Name="tb_repeat_times" Width="30" MaxLength="2" TextChanged="textBox_DigitOnly" PreviewKeyDown="Window_PreviewKeyDown" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="False"/>
-                                    <Label Content="days"/>
-                                </StackPanel>
-                            </RadioButton>
-                        </StackPanel>
-                    </Grid>
-                </Grid>
-            </Expander>
+                </RadioButton>
+            </StackPanel>
         </Grid>
-        <StackPanel Grid.Row="7" Grid.Column="2" Margin="0,10" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+        <StackPanel Grid.Row="9" Grid.Column="2" Margin="0,10" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <Button Content="Cancel" Height="30" Width="60" Background="Transparent" Click="Button_Close_Click"/>
             <Label Width="10"/>
             <Button Name="btn_ok" Content="Confirm" 
