--- a/RMTV-recorder/MainWindow.xaml
+++ b/RMTV-recorder/MainWindow.xaml
@@ -38,7 +38,7 @@
             <Grid Grid.Row="1" Grid.Column="1" Name="grid_clock" Background="OldLace">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0" Margin="10" VerticalAlignment="Center">
                     <Image Source="/Resource/clock.png" Height="40" Width="40" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5">
@@ -54,7 +54,18 @@
                     </StackPanel>
                     
                 </Grid>
-                <Label Grid.Column="1" x:Name="label_clock" Content="--" Foreground="Salmon" FontSize="20" VerticalAlignment="Center"/>
+                <Grid Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Label x:Name="label_clockdate" Content="--" Foreground="Salmon" FontSize="10"/>
+                    <Label Grid.RowSpan="2" x:Name="label_clocktime" Content="--" 
+                           Foreground="Salmon" FontSize="20" 
+                           VerticalAlignment="Center" HorizontalAlignment="Center"
+                           Margin="0,10,0,0"/>
+                </Grid>
+                
             </Grid>
             <Grid Grid.Row="1" Grid.Column="3" Background="LightSalmon" ToolTip="Watch RMTV">
                 <Image Source="/Resource/tv.png" Height="40"/>
@@ -89,7 +100,9 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <ComboBox Grid.Column="0" x:Name="cb_lang" Height="20" Width="75" Background="Wheat" IsSelected="True">
+                <ComboBox Grid.Column="0" x:Name="cb_lang" Height="25" Width="80" 
+                          Background="Wheat" IsSelected="True"
+                          Style="{StaticResource ResourceKey=ComboBoxStyle}">
                     <ComboBoxItem Tag="es" IsSelected="True">Spanish</ComboBoxItem>
                     <ComboBoxItem Tag="en">English</ComboBoxItem>
                 </ComboBox>
